Various layout issues #3 (#263)

--- a/src/components/common/ReplyMessage.scss
+++ b/src/components/common/ReplyMessage.scss
@@ -18,9 +18,13 @@
     box-shadow: 0 1px 2px rgba(114, 114, 114, 0.25);
 
     &::before {
-      left: 0.5rem;
-      top: 0.5rem;
-      bottom: 0.5rem;
+      left: .625rem;
+      top: .625rem;
+      bottom: .625rem;
+    }
+
+    img {
+      margin-left: .5rem;
     }
   }
 
