--- a/src/components/middle/message/Media.scss
+++ b/src/components/middle/message/Media.scss
@@ -43,6 +43,7 @@
     }
   }
 
+  .message-media-duration,
   .message-upload-progress {
     background: rgba(0, 0, 0, .25);
     color: #fff;
@@ -67,20 +68,5 @@
       font-size: 2.5rem;
       color: white;
     }
-  }
-
-  .message-media-duration {
-    position: absolute;
-    height: 1.1rem;
-    top: 0.25rem;
-    left: 0.25rem;
-    display: flex;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 9px;
-    padding: 0 0.375rem;
-    color: white;
-    font-size: 0.7rem;
-    line-height: 1;
   }
 }
